deploy: 8a4db0204cdbd2897005984fa3b386a7d21f2177

--- a/index.html
+++ b/index.html
@@ -819,6 +819,15 @@
                 </a>
               </div>
             
+              <div class="sponsor">
+                <h3>
+                  microCMS
+                </h3>
+                <a href="https://microcms.co.jp" target="_blank">
+                  <img src="images/microcms.png" width="200" height="200">
+                </a>
+              </div>
+            
           </div>
         </div>
 			</div>
