deploy: 759d75c27964cc907366663f96a7df4bdf5829a1

--- a/guide/customization/index.html
+++ b/guide/customization/index.html
@@ -788,7 +788,7 @@ the logger. Default value:</p>
 <h3 id="log-output">Log Output<a href="#log-output" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h3>
 <p><code>Echo#Logger.SetOutput(io.Writer)</code> can be used to set the output destination for
 the logger. Default value is <code>os.Stdout</code></p>
-<p>To completely disable logs use <code>Echo#Logger.SetOutput(ioutil.Discard)</code> or <code>Echo#Logger.SetLevel(log.OFF)</code></p>
+<p>To completely disable logs use <code>Echo#Logger.SetOutput(io.Discard)</code> or <code>Echo#Logger.SetLevel(log.OFF)</code></p>
 <h3 id="log-level">Log Level<a href="#log-level" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h3>
 <p><code>Echo#Logger.SetLevel(log.Lvl)</code> can be used to set the log level for the logger.
 Default value is <code>ERROR</code>. Possible values:</p>
@@ -852,7 +852,7 @@ on request payload.</p>
         </div>
         <footer class="w3-content w3-container w3-padding-48 w3-center footer">
   <p>
-    <strong>Echo</strong> by <a href="https://labstack.com">LabStack</a> © 2022 LabStack
+    <strong>Echo</strong> by <a href="https://labstack.com">LabStack</a> © 2023 LabStack
   </p>
   <p>
     <a class="icon" href="https://labstack.com/blog">
