deploy: 436cd654be97137522254ad23208e4c8a4f9a074

--- a/guide/customization/index.html
+++ b/guide/customization/index.html
@@ -752,6 +752,7 @@
     <li><a href="#write-timeout">Write Timeout</a></li>
     <li><a href="#validator">Validator</a></li>
     <li><a href="#custom-binder">Custom Binder</a></li>
+    <li><a href="#custom-json-serializer">Custom JSON Serializer</a></li>
     <li><a href="#renderer">Renderer</a></li>
     <li><a href="#http-error-handler">HTTP Error Handler</a></li>
   </ul>
@@ -828,6 +829,9 @@ on request payload.</p>
 <h2 id="custom-binder">Custom Binder<a href="#custom-binder" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
 <p><code>Echo#Binder</code> can be used to register a custom binder for binding request payload.</p>
 <p><a href="/guide/request/#custom-binder">Learn more</a></p>
+<h2 id="custom-json-serializer">Custom JSON Serializer<a href="#custom-json-serializer" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><code>Echo#JSONSerializer</code> can be used to register a custom JSON serializer.</p>
+<p>Have a look at <code>DefaultJSONSerializer</code> on <a href="https://github.com/labstack/echo/blob/master/json.go">json.go</a>.</p>
 <h2 id="renderer">Renderer<a href="#renderer" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
 <p><code>Echo#Renderer</code> can be used to register a renderer for template rendering.</p>
 <p><a href="/guide/templates">Learn more</a></p>
