deploy: 70d3ec7b083f0560454f0013ab7b79967076252c

--- a/index.html
+++ b/index.html
@@ -828,6 +828,15 @@
                 </a>
               </div>
             
+              <div class="sponsor">
+                <h3>
+                  DoiT
+                </h3>
+                <a href="https://doit.com" target="_blank">
+                  <img src="images/doit.png" width="200" height="200">
+                </a>
+              </div>
+            
           </div>
         </div>
 			</div>
