deploy: 6932acf75aad6184ceaa06801f5eb82af36c8a4d

--- a/guide/ip-address/index.html
+++ b/guide/ip-address/index.html
@@ -743,7 +743,7 @@
   </ul>
 </nav>
 
-                        <p>IP address plays fundamental role in HTTP; it&rsquo;s used for access control, auditting, geo-based access analysis and more.
+                        <p>IP address plays fundamental role in HTTP; it&rsquo;s used for access control, auditing, geo-based access analysis and more.
 Echo provides handy method <a href="https://godoc.org/github.com/labstack/echo#Context"><code>Context#RealIP()</code></a> for that.</p>
 <p>However, it is not trivial to retrieve the <em>real</em> IP address from requests especially when you put L7 proxies before the application.
 In such situation, <em>real</em> IP needs to be relayed on HTTP layer from proxies to your app, but you must not trust HTTP headers unconditionally.
