deploy: 6641d2592daa3bba8b1165e835d5c9cbe6e34523

--- a/cookbook/auto-tls/index.html
+++ b/cookbook/auto-tls/index.html
@@ -737,7 +737,7 @@
                         <nav id="TableOfContents">
   <ul>
     <li><a href="#server">Server</a></li>
-    <li><a href="#source-codehahahugoshortcode-s1-hbhb"><a href="HAHAHUGOSHORTCODE-s1-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -756,8 +756,9 @@ message with TLS enabled on the website.</p>
 <p><code>server.go</code></p>
 <pre data-src="https://raw.githubusercontent.com/labstack/echox/master/cookbook/auto-tls/server.go"></pre>
 
-<h2 id="source-codehahahugoshortcode-s1-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/auto-tls
-">Source Code</a></h2>
+<h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/auto-tls
+">See</a></p>
 
                     </section>
                     <footer>
