--- a/cookbook/cors/index.html
+++ b/cookbook/cors/index.html
@@ -738,7 +738,7 @@
   <ul>
     <li><a href="#server-using-a-list-of-allowed-origins">Server using a list of allowed origins</a></li>
     <li><a href="#server-using-a-custom-function-to-allow-origins">Server using a custom function to allow origins</a></li>
-    <li><a href="#source-codehahahugoshortcode-s2-hbhb"><a href="HAHAHUGOSHORTCODE-s2-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -750,8 +750,9 @@
 <p><code>server.go</code></p>
 <pre data-src="https://raw.githubusercontent.com/labstack/echox/master/cookbook/cors/origin-func/server.go"></pre>
 
-<h2 id="source-codehahahugoshortcode-s2-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/cors
-">Source Code</a></h2>
+<h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/cors
+">See</a></p>
 
                     </section>
                     <footer>
