--- a/cookbook/embed-resources/index.html
+++ b/cookbook/embed-resources/index.html
@@ -737,9 +737,9 @@
                         <nav id="TableOfContents">
   <ul>
     <li><a href="#with-go-116-embed-feature">With go 1.16 embed feature</a></li>
-    <li><a href="#source-codehahahugoshortcode-s1-hbhb"><a href="HAHAHUGOSHORTCODE-s1-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
     <li><a href="#with-gorice">With go.rice</a></li>
-    <li><a href="#source-codehahahugoshortcode-s3-hbhb"><a href="HAHAHUGOSHORTCODE-s3-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code-1">Source Code</a></li>
   </ul>
 </nav>
 
@@ -747,14 +747,16 @@
 <p><code>server.go</code></p>
 <pre data-src="https://raw.githubusercontent.com/labstack/echox/master/cookbook/embed/server.go"></pre>
 
-<h2 id="source-codehahahugoshortcode-s1-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/embed
-">Source Code</a></h2>
+<h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/embed
+">See</a></p>
 <h2 id="with-gorice">With go.rice<a href="#with-gorice" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
 <p><code>server.go</code></p>
 <pre data-src="https://raw.githubusercontent.com/labstack/echox/master/cookbook/embed-resources/server.go"></pre>
 
-<h2 id="source-codehahahugoshortcode-s3-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/embed-resources
-">Source Code</a></h2>
+<h2 id="source-code-1">Source Code<a href="#source-code-1" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/embed-resources
+">See</a></p>
 
                     </section>
                     <footer>
