--- a/cookbook/google-app-engine/index.html
+++ b/cookbook/google-app-engine/index.html
@@ -743,7 +743,7 @@
         <li><a href="#router-configuration">Router configuration</a></li>
       </ul>
     </li>
-    <li><a href="#source-codehahahugoshortcode-s6-hbhb"><a href="HAHAHUGOSHORTCODE-s6-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -839,8 +839,9 @@ gcloud preview app run .
 switching between AppEngine provided service such as Datastore and alternative storage implementations
 such as MongoDB. A combination of go interfaces and build constraints can make this fairly straightforward
 but is outside the scope of this example.</p>
-<h2 id="source-codehahahugoshortcode-s6-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/google-app-engine
-">Source Code</a></h2>
+<h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/google-app-engine
+">See</a></p>
 
                     </section>
                     <footer>
