--- a/cookbook/http2-server-push/index.html
+++ b/cookbook/http2-server-push/index.html
@@ -745,7 +745,7 @@
         <li><a href="#step-5-start-the-server-and-browse-to-httpslocalhost1323">Step 5: Start the server and browse to https://localhost:1323</a></li>
       </ul>
     </li>
-    <li><a href="#source-codehahahugoshortcode-s0-hbhb"><a href="HAHAHUGOSHORTCODE-s0-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -795,8 +795,9 @@
 </span></span><span style="display:flex;"><span>Remote Address: <span style="color:#f92672">[</span>::1<span style="color:#f92672">]</span>:60288
 </span></span><span style="display:flex;"><span>Method: GET
 </span></span><span style="display:flex;"><span>Path: /
-</span></span></code></pre></div><h2 id="source-codehahahugoshortcode-s0-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/http2-server-push
-">Source Code</a></h2>
+</span></span></code></pre></div><h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/http2-server-push
+">See</a></p>
 <p><code>index.html</code></p>
 <pre data-src="https://raw.githubusercontent.com/labstack/echox/master/cookbook/http2-server-push/index.html"></pre>
 
