--- a/cookbook/jsonp/index.html
+++ b/cookbook/jsonp/index.html
@@ -738,7 +738,7 @@
   <ul>
     <li><a href="#server">Server</a></li>
     <li><a href="#client">Client</a></li>
-    <li><a href="#source-codehahahugoshortcode-s2-hbhb"><a href="HAHAHUGOSHORTCODE-s2-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -751,8 +751,9 @@
 <p><code>index.html</code></p>
 <pre data-src="https://raw.githubusercontent.com/labstack/echox/master/cookbook/jsonp/public/index.html"></pre>
 
-<h2 id="source-codehahahugoshortcode-s2-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/jsonp
-">Source Code</a></h2>
+<h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/jsonp
+">See</a></p>
 
                     </section>
                     <footer>
