--- a/cookbook/middleware/index.html
+++ b/cookbook/middleware/index.html
@@ -742,7 +742,7 @@
         <li><a href="#response">Response</a></li>
       </ul>
     </li>
-    <li><a href="#source-codehahahugoshortcode-s1-hbhb"><a href="HAHAHUGOSHORTCODE-s1-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -770,8 +770,9 @@
 </span></span><span style="display:flex;"><span>    <span style="color:#e6db74">&#34;404&#34;</span><span style="color:#f92672">:</span> <span style="color:#ae81ff">1</span>
 </span></span><span style="display:flex;"><span>  }
 </span></span><span style="display:flex;"><span>}
-</span></span></code></pre></div><h2 id="source-codehahahugoshortcode-s1-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/middleware
-">Source Code</a></h2>
+</span></span></code></pre></div><h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/middleware
+">See</a></p>
 
                     </section>
                     <footer>
