--- a/cookbook/reverse-proxy/index.html
+++ b/cookbook/reverse-proxy/index.html
@@ -745,7 +745,7 @@
         <li><a href="#step-4-browse-to-httplocalhost1323">Step 4: Browse to http://localhost:1323</a></li>
       </ul>
     </li>
-    <li><a href="#source-codehahahugoshortcode-s0-hbhb"><a href="HAHAHUGOSHORTCODE-s0-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -793,8 +793,9 @@
 </span></span><span style="display:flex;"><span>Hello from upstream server server2!
 </span></span><span style="display:flex;"><span>Hello from upstream server server2!
 </span></span><span style="display:flex;"><span>Hello from upstream server server2!
-</span></span></code></pre></div><h2 id="source-codehahahugoshortcode-s0-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/reverse-proxy
-">Source Code</a></h2>
+</span></span></code></pre></div><h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/reverse-proxy
+">See</a></p>
 <p><code>upstream/server.go</code></p>
 <pre data-src="https://raw.githubusercontent.com/labstack/echox/master/cookbook/reverse-proxy/upstream/server.go"></pre>
 
