--- a/cookbook/streaming-response/index.html
+++ b/cookbook/streaming-response/index.html
@@ -739,7 +739,7 @@
     <li><a href="#server">Server</a></li>
     <li><a href="#client">Client</a></li>
     <li><a href="#output">Output</a></li>
-    <li><a href="#source-codehahahugoshortcode-s1-hbhb"><a href="HAHAHUGOSHORTCODE-s1-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -759,8 +759,9 @@
 </span></span><span style="display:flex;"><span><span style="color:#f92672">{</span><span style="color:#e6db74">&#34;Altitude&#34;</span>:2619,<span style="color:#e6db74">&#34;Latitude&#34;</span>:37.865101,<span style="color:#e6db74">&#34;Longitude&#34;</span>:-119.538329<span style="color:#f92672">}</span>
 </span></span><span style="display:flex;"><span><span style="color:#f92672">{</span><span style="color:#e6db74">&#34;Altitude&#34;</span>:42,<span style="color:#e6db74">&#34;Latitude&#34;</span>:33.812092,<span style="color:#e6db74">&#34;Longitude&#34;</span>:-117.918974<span style="color:#f92672">}</span>
 </span></span><span style="display:flex;"><span><span style="color:#f92672">{</span><span style="color:#e6db74">&#34;Altitude&#34;</span>:15,<span style="color:#e6db74">&#34;Latitude&#34;</span>:37.77493,<span style="color:#e6db74">&#34;Longitude&#34;</span>:-122.419416<span style="color:#f92672">}</span>
-</span></span></code></pre></div><h2 id="source-codehahahugoshortcode-s1-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/streaming-response
-">Source Code</a></h2>
+</span></span></code></pre></div><h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/streaming-response
+">See</a></p>
 
                     </section>
                     <footer>
