--- a/cookbook/websocket/index.html
+++ b/cookbook/websocket/index.html
@@ -748,7 +748,7 @@
     </li>
     <li><a href="#client">Client</a></li>
     <li><a href="#output">Output</a></li>
-    <li><a href="#source-codehahahugoshortcode-s3-hbhb"><a href="HAHAHUGOSHORTCODE-s3-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -779,8 +779,9 @@
 </span></span><span style="display:flex;"><span>Hello, Server!
 </span></span><span style="display:flex;"><span>Hello, Server!
 </span></span><span style="display:flex;"><span>Hello, Server!
-</span></span></code></pre></div><h2 id="source-codehahahugoshortcode-s3-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/websocket
-">Source Code</a></h2>
+</span></span></code></pre></div><h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/websocket
+">See</a></p>
 
                     </section>
                     <footer>
