--- a/cookbook/graceful-shutdown/index.html
+++ b/cookbook/graceful-shutdown/index.html
@@ -737,7 +737,7 @@
                         <nav id="TableOfContents">
   <ul>
     <li><a href="#using-httpservershutdownhttpsgolangorgpkgnethttpservershutdown">Using <a href="https://golang.org/pkg/net/http/#Server.Shutdown">http.Server#Shutdown()</a></a></li>
-    <li><a href="#source-codehahahugoshortcode-s1-hbhb"><a href="HAHAHUGOSHORTCODE-s1-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -748,8 +748,9 @@
 <blockquote>
 <p>Requires go1.8+</p>
 </blockquote>
-<h2 id="source-codehahahugoshortcode-s1-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/graceful-shutdown
-">Source Code</a></h2>
+<h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/graceful-shutdown
+">See</a></p>
 
                     </section>
                     <footer>
