--- a/cookbook/twitter/index.html
+++ b/cookbook/twitter/index.html
@@ -748,7 +748,7 @@
         <li><a href="#feed">Feed</a></li>
       </ul>
     </li>
-    <li><a href="#source-codehahahugoshortcode-s6-hbhb"><a href="HAHAHUGOSHORTCODE-s6-HBHB">Source Code</a></a></li>
+    <li><a href="#source-code">Source Code</a></li>
   </ul>
 </nav>
 
@@ -887,8 +887,9 @@ Path: <code>/feed?page=1&amp;limit=5</code></p>
 </span></span><span style="display:flex;"><span>    <span style="color:#e6db74">&#34;message&#34;</span><span style="color:#f92672">:</span> <span style="color:#e6db74">&#34;hello&#34;</span>
 </span></span><span style="display:flex;"><span>  }
 </span></span><span style="display:flex;"><span>]
-</span></span></code></pre></div><h2 id="source-codehahahugoshortcode-s6-hbhb"><a href="https://github.com/labstack/echox/tree/master/cookbook/twitter
-">Source Code</a></h2>
+</span></span></code></pre></div><h2 id="source-code">Source Code<a href="#source-code" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://github.com/labstack/echox/tree/master/cookbook/twitter
+">See</a></p>
 
                     </section>
                     <footer>
