--- a/guide/static-files/index.html
+++ b/guide/static-files/index.html
@@ -736,14 +736,15 @@
 
                         <nav id="TableOfContents">
   <ul>
-    <li><a href="#using-static-middlewarehahahugoshortcode-s0-hbhb"><a href="HAHAHUGOSHORTCODE-s0-HBHB">Using Static Middleware</a></a></li>
+    <li><a href="#using-static-middleware">Using Static Middleware</a></li>
     <li><a href="#using-echostatic">Using <code>Echo#Static()</code></a></li>
     <li><a href="#using-echofile">Using <code>Echo#File()</code></a></li>
   </ul>
 </nav>
 
                         <p>Images, JavaScript, CSS, PDF, Fonts and so on&hellip;</p>
-<h2 id="using-static-middlewarehahahugoshortcode-s0-hbhb"><a href="https://echo.labstack.com/middleware/static/">Using Static Middleware</a><a href="#using-static-middlewarehahahugoshortcode-s0-hbhb" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<h2 id="using-static-middleware">Using Static Middleware<a href="#using-static-middleware" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://echo.labstack.com/middleware/static/">See</a></p>
 <h2 id="using-echostatic">Using <code>Echo#Static()</code><a href="#using-echostatic" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
 <p><code>Echo#Static(prefix, root string)</code> registers a new route with path prefix to serve
 static files from the provided root directory.</p>
