--- a/middleware/index.html
+++ b/middleware/index.html
@@ -740,7 +740,7 @@
       </ul>
     </li>
     <li><a href="#skipping-middleware">Skipping Middleware</a></li>
-    <li><a href="#writing-custom-middlewarehahahugoshortcode-s0-hbhb"><a href="HAHAHUGOSHORTCODE-s0-HBHB">Writing Custom Middleware</a></a></li>
+    <li><a href="#writing-custom-middleware">Writing Custom Middleware</a></li>
   </ul>
 </nav>
 
@@ -816,7 +816,8 @@ for that each middleware has an option to define a function <code>Skipper func(c
 </span></span><span style="display:flex;"><span>	},
 </span></span><span style="display:flex;"><span>}))
 </span></span></code></pre></div><p>Example above skips Logger middleware when request host starts with localhost.</p>
-<h2 id="writing-custom-middlewarehahahugoshortcode-s0-hbhb"><a href="https://echo.labstack.com/cookbook/middleware/">Writing Custom Middleware</a><a href="#writing-custom-middlewarehahahugoshortcode-s0-hbhb" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<h2 id="writing-custom-middleware">Writing Custom Middleware<a href="#writing-custom-middleware" class="hanchor" ariaLabel="Anchor"> 🔗</a> </h2>
+<p><a href="https://echo.labstack.com/cookbook/middleware/">See</a></p>
 
                     </section>
                     <footer>
